--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "mailer-gateway",
   "version": "1.0.0",
   "description": "Mailer gateway for EskriMail",
@@ -17,11 +16,22 @@
     "url": "https://github.com/rtorino/mailer-gateway/issues"
   },
   "homepage": "https://github.com/rtorino/mailer-gateway",
+  "name": "gateway",
+  "version": "0.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "hapi": "^8.4.0",
     "hapi-swagger": "^0.7.1",
     "joi": "^6.0.8",
     "rabbus": "^0.3.0",
     "wascally": "^0.2.4"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
