--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+
   "name": "mailer-gateway",
   "version": "1.0.0",
   "description": "Mailer gateway for EskriMail",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/rtorino/mailer-gateway",
   "dependencies": {
-    "hapi": "^8.4.0"
+    "hapi": "^8.4.0",
+    "hapi-swagger": "^0.7.1",
+    "joi": "^6.0.8",
+    "rabbus": "^0.3.0",
+    "wascally": "^0.2.4"
   }
 }
