--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,19 @@
 	"dev" : {
 		"api" : {
 			"host" : "localhost",
-			"port"   : 8005
+			"port"   : 8005,
+			"routes": {
+				"cors": true
+			}
 		},
 
+
 		"rabbit" : {
-			"server"   : "localhost",
+			"server" : "192.168.59.103",
 			"vhost"    : "/",
-			"user"     : "guest",
-			"password" : "guest"
+		    "port"   : 5672,
+		    "user"   : "admin",
+		    "pass"   : "rabbit"
 		},
 
 		"swagger" : {
