--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hapi": "^8.4.0",
     "hapi-swagger": "^0.7.1",
     "joi": "^6.0.8",
+    "lapin": "^3.0.0",
     "rabbus": "^0.3.0",
     "wascally": "^0.2.4"
   },
