--- a/package.json
+++ b/package.json
@@ -1,38 +1,30 @@
 {
-  "name": "mailer-gateway",
-  "version": "1.0.0",
-  "description": "Mailer gateway for EskriMail",
+  "name": "gateway",
+  "version": "0.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/rtorino/mailer-gateway.git"
   },
-  "author": "GZ Eskrima",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rtorino/mailer-gateway/issues"
   },
   "homepage": "https://github.com/rtorino/mailer-gateway",
-  "name": "gateway",
-  "version": "0.0.0",
-  "description": "",
-  "main": "server.js",
   "dependencies": {
     "hapi": "^8.4.0",
     "hapi-swagger": "^0.7.1",
     "joi": "^6.0.8",
     "lapin": "^3.0.0",
     "rabbus": "^0.3.0",
-    "wascally": "^0.2.4"
+    "wascally": "^0.2.4",
+    "zero-config": "^6.0.2"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {}
 }
