--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,4 +1,4 @@
-emailGateway:
+gateway:
   build: .
 
   environment:
@@ -6,3 +6,6 @@ emailGateway:
 
   external_links:
     - rabbitmq
+
+  ports:
+    - "8005:8005"
